# omnia

./: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
src/: cli.rs  main.rs
src/domain/dto/: mod.rs  sign_in_dto.rs  sign_up_dto.rs
src/domain/entities/: user.rs
src/handler/: auth.rs
src/middleware/: auth.rs  mod.rs  tryjson.rs
