# ==================================================
# Package
# ==================================================
[package]
name = "omnia"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8.8"
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.149"
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "parking_lot",
  "sync",
] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["normalize-path"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[lints]
workspace = true

# ==================================================
# Workspace
# ==================================================
[workspace]
members = ["."]
resolver = "3"

[workspace.package]
authors = ["Carlos Danie Garfio Murillo <cgarfiomurillo@outlook.com>"]
edition = "2024"
rust-version = "1.92.0"

[workspace.dependencies]
rand = "0.9.2"
chrono = "0.4.42"
clap = "4.5.54"
tokio = "1.49.0"
serde = "1.0.228"

[workspace.lints.rust]
dead-code = "warn"
# unsafe-code = "forbid"
unused-imports = "warn"
unused-variables = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
missing-safety-doc = "deny"
needless-collect = "deny"
panic = "deny"
print-stderr = "deny"
print-stdout = "deny"
redundant-clone = "deny"
redundant-closure = "deny"
todo = "deny"
undocumented-unsafe-blocks = "deny"
unimplemented = "deny"
unwrap-used = "deny"

complexity = { level = "warn", priority = -1 }
doc-markdown = "warn"
float-cmp = "warn"
non-ascii-literal = "warn"
style = { level = "warn", priority = -1 }
too-many-arguments = "warn"
too-many-lines = "warn"
type-complexity = "warn"
